@@ -25,6 +25,7 @@ int json_device_read(const char *buf,
 		     /*@out@*/ struct devconfig_t *dev,
 		     /*@null@*/ const char **endptr)
 {
+    char tbuf[JSON_DATE_MAX+1];
     /*@ -fullinitblock @*/
     /* *INDENT-OFF* */
     const struct json_attr_t json_attrs_device[] = {
@@ -32,6 +33,8 @@ int json_device_read(const char *buf,
 	
         {"path",       t_string,     .addr.string  = dev->path,
 	                                .len = sizeof(dev->path)},
+	{"activated",  t_string,     .addr.string = tbuf,
+			                .len = sizeof(tbuf)},
 	{"activated",  t_real,       .addr.real = &dev->activated},
 	{"flags",      t_integer,    .addr.integer = &dev->flags},
 	{"driver",     t_string,     .addr.string  = dev->driver,
@@ -59,6 +62,15 @@ int json_device_read(const char *buf,
     status = json_read_object(buf, json_attrs_device, endptr);
     if (status != 0)
 	return status;
+
+    /*@-usedef@*/
+    if (isnan(dev->activated)!=0) {
+	if (tbuf[0] == '\0')
+	    dev->activated = NAN;
+	else
+	    dev->activated = iso8601_to_unix(tbuf);
+    }
+    /*@+usedef@*/
 
     return 0;
 }
